--- a/config/corne.conf
+++ b/config/corne.conf
@@ -31,14 +31,14 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 ## RGB Underglow
 
 # Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
 
 # 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
-# CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 
 # Turn off RGB underglow when keyboard goes into idle state
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 # # Hue step in degrees (0-359) used by RGB actions default 10
 # CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
